--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "expencify",
   "version": "1.0.0",
+  "engines": {
+    "node": "11.0.0"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,7 +13,7 @@
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json",
     "start": "node server/server.js",
-    "heroku-postbuild": "npm install && npm run build:prod"
+    "heroku-postbuild": "npm run build:prod"
   },
   "keywords": [],
   "author": "",
