--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "expencify",
   "version": "1.0.0",
   "engines": {
-    "node": "11.0.0"
+    "node": "11.0.0",
+    "npm": "6.9.0"
   },
   "description": "",
   "main": "index.js",
