--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json",
     "start": "node server/server.js",
-    "heroku-postbuild": "npm run build:prod"
+    "heroku-postbuild": "npm install && npm run build:prod"
   },
   "keywords": [],
   "author": "",
