--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "live-server public/",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
@@ -20,8 +19,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@amcharts/amcharts4": "^4.5.3",
-    "@amcharts/amcharts4-geodata": "^4.1.6",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
@@ -30,16 +27,12 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "enzyme-to-json": "^3.3.5",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.2",
-    "jest": "^20.0.4",
-    "live-server": "^1.2.1",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "normalize.css": "^7.0.0",
+    "production": "0.0.2",
     "raf": "^3.4.1",
     "react": "^16.8.6",
     "react-addons-shallow-compare": "^15.6.2",
@@ -48,13 +41,20 @@
     "react-modal": "^2.4.1",
     "react-redux": "^5.1.1",
     "react-router-dom": "^5.0.1",
-    "react-test-renderer": "^16.8.6",
     "redux": "^3.7.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.18.2",
     "uuid": "^3.3.2",
     "validator": "^8.2.0",
-    "webpack": "^3.12.0",
+    "webpack": "^3.12.0"
+  },
+  "devDependencies": {
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.3.5",
+    "jest": "^20.0.4",
+    "live-server": "^1.2.1",
+    "react-test-renderer": "^16.8.6",
     "webpack-dev-server": "^2.11.5"
   }
 }
