--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "normalize.css": "^7.0.0",
+    "numeral": "^2.0.6",
     "production": "0.0.2",
     "raf": "^3.4.1",
     "react": "^16.8.6",
