--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "expencify",
   "version": "1.0.0",
   "engines": {
-    "node": "11.0.0",
-    "npm": "6.4.1"
+    "node": "11.0.0"
   },
   "description": "",
   "main": "index.js",
@@ -11,7 +10,7 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest --config=jest.config.json",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
     "start": "node server/server.js",
     "heroku-postbuild": "npm run build:prod"
   },
@@ -29,6 +28,7 @@
     "css-loader": "^0.28.11",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.2",
+    "firebase": "^4.2.0",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "normalize.css": "^7.0.0",
@@ -43,6 +43,8 @@
     "react-redux": "^5.1.1",
     "react-router-dom": "^5.0.1",
     "redux": "^3.7.2",
+    "redux-mock-store": "^1.2.3",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.18.2",
     "uuid": "^3.3.2",
@@ -50,6 +52,7 @@
     "webpack": "^3.12.0"
   },
   "devDependencies": {
+    "dotenv": "^4.0.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.3.5",
